CSS: Fixed scrollbar to exclude navbar section. Added scroll snap to home page. Changed main containers to display flex. Changed main containers height from 100% to 100vh.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,8 +40,6 @@ nav .active{
 
 /* smooth scrolling for anchor links */
 html{
-    scroll-behavior: smooth;
-    scroll-padding-top: 50px;
     height: 100%;
 }
 
@@ -51,15 +49,20 @@ body{
     color: white;
     margin: 0;
     font-family: cursive;
-    height: 100%;
+    height: inherit;
+    overflow: hidden;
     /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
     /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
 }
 
 #body-container{
+    scroll-behavior: smooth;
+    scroll-padding-top: 50px;
     margin: 0;
-    height: 100%;
-    width: 100%;
+    height: inherit;
+    width: inherit;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
 }
 
 /* all links */
@@ -82,12 +85,12 @@ h1{
     padding: 0;
     width: 100%;
     display: grid;
-    grid-template-columns:  repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
 
 .card{
-    height: 250px;
-    width: 250px;
+    height: 100%;
+    width: 100%;
     position: relative;
     overflow: hidden;
 }
@@ -175,7 +178,10 @@ h1{
 .main-container{
     margin: 0;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    scroll-snap-align: start;
 }
 
 #wallpaper{
@@ -183,7 +189,7 @@ h1{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     display: grid;
     place-items: center;
